src/objects/MetrostudyMarket__c.object
<CustomObject>
    <description>Metrostudy Survey Markets</description>
    <fields>
        <fullName>CategoryID__c</fullName>
        <label>Category ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of market displayed on Metrostudy.com</inlineHelpText>
        <label>Market Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Metroclient Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipLabel>Metrostudy Markets</relationshipLabel>
        <relationshipName>MetrostudyMarkets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncludeOnWebsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to include Market on Metrostudy.com website</description>
        <inlineHelpText>Check box to include Market on Metrostudy.com website</inlineHelpText>
        <label>Include On Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketCode__c</fullName>
        <inlineHelpText>Legacy Metrostudy Market Code</inlineHelpText>
        <label>Market Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Central/Northern FL</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Maryland/Northern VA/DC</fullName>
                </value>
                <value>
                    <fullName>Midwest - Eastern</fullName>
                </value>
                <value>
                    <fullName>Midwest - Lower</fullName>
                </value>
                <value>
                    <fullName>Midwest - Upper</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National - BPM</fullName>
                </value>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>NY/NJ/PA/DE</fullName>
                </value>
                <value>
                    <fullName>Phoenix/Tucson/Prescott</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>REE - West</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>SoCal 2</fullName>
                </value>
                <value>
                    <fullName>Southern FL</fullName>
                </value>
                <value>
                    <fullName>Tampa / Sarasota</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Washington/Oregon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_2__c</fullName>
        <label>Segment 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <inlineHelpText>Street address, including suite number</inlineHelpText>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TollfreePhone__c</fullName>
        <label>Tollfree Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Webinar__c</fullName>
        <inlineHelpText>URL of Webinar.  Leave blank when a link should not be available.</inlineHelpText>
        <label>Webinar Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Metrostudy Market</label>
    <listViews>
        <fullName>AllContact</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>Description__c</columns>
        <columns>IncludeOnWebsite__c</columns>
        <columns>TollfreePhone__c</columns>
        <columns>Phone__c</columns>
        <columns>Fax__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllContactAddress</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Fax__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Address</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bad_Name_or_missing_Market_Code</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>MarketCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CategoryID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - dispalyed with Relationship fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Markets_with_available_webinars</fullName>
        <columns>NAME</columns>
        <columns>Webinar__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Webinar__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Webinar - Markets with webinars</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Markets_without_webinars</fullName>
        <columns>NAME</columns>
        <columns>Webinar__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Webinar__c</field>
            <operation>equals</operation>
        </filters>
        <label>Webinar - Markets without webinars</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>